syntax = "proto3";
package userpb;
option go_package = "github.com/sm888sm/halten-backend/user-service/pb/user";

// Data Structures (Messages)

// Login

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

// Refresh Token

message RefreshTokenRequest {
    string refreshToken = 1;
}

message RefreshTokenResponse {
    string accessToken = 1;
}

// The Authentication Service Definition
service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}